# Item-Management

./: .gitignore  README.md  project-managerdemo.html  structure.txt
tauri-app/: package-lock.json  package.json  vite.config.ts
tauri-app/src/: App.tsx  index.css  vite-env.d.ts
tauri-app/src-old/: index.html
tauri-app/src-old/css/: main.css
tauri-app/src-old/js/: api.js  board.js  chat.js  main.js  modals.js  preview.js  settings.js  sidebar.js  store.js  theme.js  utils.js
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  models.rs  services.rs  storage.rs  tools.rs
tauri-app/src-tauri/src/db/: migration.rs  mod.rs  sqlite.rs
tauri-app/src-tauri/tests/: storage_tests.rs
tauri-app/src/api/: chat.ts  configs.ts  core.ts  folders.ts  index.ts  nodes.ts  projects.ts  system.ts
tauri-app/src/components/board/: Board.tsx
tauri-app/src/components/chat/: ChatInput.tsx  ChatMenu.tsx  ChatMessages.tsx  ChatPanel.tsx  ContextPicker.tsx
tauri-app/src/components/layout/: Header.tsx  Layout.tsx  SearchBox.tsx  Toast.tsx
tauri-app/src/components/modals/: ConfirmModal.tsx  FileModal.tsx  FolderModal.tsx  Modal.tsx  ModalRenderer.tsx  NodeModal.tsx  PreviewModal.tsx  ProjectModal.tsx  (+2 more)
tauri-app/src/stores/: appStore.ts  chatStore.ts  settingsStore.ts
tauri-app/src/types/: api-config.ts  chat.ts  folder.ts  index.ts  node.ts  project.ts  search.ts
tauri-app/src/utils/: format.ts
tauri-app/tests-old/: test.html  utils.test.js
(+8 files in other folders)
